# OpenGL

./: CMakeLists.txt  main.cpp
assets/models/light_suit/: posed.mtl
src/: event.h
src/graphics/: camera.cpp  camera.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
src/graphics/models/: mesh.cpp  mesh.h  model.cpp  model.h
src/shaders/: cube.frag  cube.vert  floor.frag  floor.vert  light.frag  light.vert  model.frag  model.vert  model_pro.frag  model_pro.vert  shader.frag  shader.vert
src/utils/: file_loader.cpp  file_loader.h  timer.cpp  timer.h
